tests/invalid/generated_binop_mul_bytearray_str/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: bytearray = bytearray(b"hello")
    y: str = "hello"
    z = x * y
